--- a/index.html
+++ b/index.html
@@ -7,14 +7,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h2>T1 Box</h2>
-  <div class="row">
-    <div class="box">1</div>
-    <div class="box">2</div>
-    <div class="box">3</div>
-  </div>
-
-  <h2>T2 Col</h2>
+  <h2>1st Box</h2>
   <div class="row">
     <div class="box">1</div>
     <div class="box">2</div>
