--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <title>Part1</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <h2>1st Box</h2>
@@ -14,6 +14,6 @@
     <div class="box">3</div>
   </div>
 
-  <a href="t34.html" class="btnn">Next →</a>
+  <a href="Part2.html" class="btnn">Next →</a>
 </body>
 </html>
