--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
     <div class="box">3</div>
   </div>
 
-  <a href="Part2.html" class="btnn">Next →</a>
+  <a href="Part2.html" class="btnn">Part2</a>
 </body>
 </html>
