--- a/Part2.html
+++ b/Part2.html
@@ -14,6 +14,11 @@
       margin: 10px;
       border-radius: 8px;
     }
+    .btnn {
+  margin-top:20px; display:inline-block;
+  padding:8px 12px; background:#333; color:#fff;
+  text-decoration:none; border-radius:5px;
+}
   </style>
 </head>
 <body>
@@ -50,6 +55,8 @@
       </div>
     </div>
   </nav>
+
+    <a href="Part3.html" class="btnn">Part3</a>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
