--- a/Part3.html
+++ b/Part3.html
@@ -75,7 +75,7 @@
               <div class="card-body">
                 <h5 class="card-title">Project 1</h5>
                 <p class="card-text">Description 1</p>
-                <a href="#" class="btn btn-primary">See</a>
+                <a href="index.html" class="btn btn-primary">See</a>
               </div>
             </div>
           </div>
@@ -84,7 +84,7 @@
               <div class="card-body">
                 <h5 class="card-title">Project 2</h5>
                 <p class="card-text">Description 2</p>
-                <a href="#" class="btn btn-primary">See</a>
+                <a href="Part2.html" class="btn btn-primary">See</a>
               </div>
             </div>
           </div>
@@ -109,3 +109,4 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
